# unica

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: unica-plugin-release.yml
crates/unica-coder/: Cargo.toml
crates/unica-coder/src/: main.rs
plugins/unica/: .mcp.json  README.md
plugins/unica/.codex-plugin/: plugin.json
plugins/unica/references/: tooling.md  v8project.md
plugins/unica/scripts/: run-bsl-analyzer.ps1  run-bsl-reference.ps1  run-bsl-workspace.ps1  run-rlm-bsl-index.ps1  run-rlm-tools-bsl.ps1  run-tool.ps1  run-unica.ps1  run-unica.sh  run-v8-runner-mcp.ps1  run-v8-runner.ps1
scripts/: install-unica.ps1  install-unica.sh
scripts/ci/: build-unica-tools.py  package-unica-plugin.py
scripts/dev/: install-local-unica.sh
spec/: IMPLEMENTATION_TODO.md  README.md
spec/acceptance/: unica-mcp-validation.md
spec/architecture/: change-checklist.md  invariants.md
spec/architecture/arc42/: 01-introduction-and-goals.md  02-constraints.md  03-context-and-scope.md  04-solution-strategy.md  05-building-block-view.md  06-runtime-view.md  07-deployment-view.md  (+6 more)
spec/decisions/: 0001-edinyy-publichnyy-mcp-unica.md  0002-transportno-neytralnyy-application-layer.md  0003-cache-i-workspace-state-prinadlezhat-orchestratoru.md  0004-legacy-skill-scripts-are-migration-debt.md  0005-skills-routyatsya-tolko-cherez-unica.md  README.md
tests/ci/: test_build_unica_tools.py  test_install_unica_script.py  test_package_unica_plugin.py  test_unica_mcp_script_parity.py  test_unica_mcp_smoke.py  test_unica_skills.py  test_unica_workflow.py
(+151 files in other folders)
