[workspace]
members = ["crates/unica-coder"]
resolver = "2"

[workspace.package]
version = "0.3.11"
edition = "2021"
license = "LGPL-3.0-or-later"
repository = "https://github.com/IngvarConsulting/unica"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
