[workspace]
members = ["crates/unica-coder"]
resolver = "2"

[workspace.package]
version = "0.4.2"
edition = "2021"
license = "LGPL-3.0-or-later"
repository = "https://github.com/IngvarConsulting/unica"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
roxmltree = "0.20"
rusqlite = { version = "0.32", features = ["bundled"] }
ureq = { version = "2.12", features = ["json"] }
